ex1-0/templates/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
    annotations:
        kubernetes.io/ingress.class: nginx
        # nginx.ingress.kubernetes.io/rewrite-target: /$2
    name: nginx-ingress
spec:
    rules:
        -
            http:
                paths:
                    - backend:
                            serviceName: nginx-service
                            servicePort: 80
                      path: /
